// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders SidebarItem components 1`] = `
<ul
  className="nav"
>
  <li
    className="nav-item"
  />
</ul>
`;

exports[`renders correctly with the default props 1`] = `
<ul
  className="nav"
/>
`;

exports[`renders only SidebarItem components 1`] = `
<ul
  className="nav"
/>
`;
